--- a/Karst/CopyOfhausaufgabe03a.Rmd
+++ b/Karst/CopyOfhausaufgabe03a.Rmd
@@ -1,6 +1,6 @@
 % Hausaufgabe 03
 % Lischka <karst@students.uni-marburg.de>
-% 2014-04-25
+% 2014-04-27
 
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
 
@@ -79,4 +79,4 @@ Die Summe von 98545455678767 und 567886538546532323 ist: `r (98545455678767+5678
 Es ist natürlich auch möglich R-Code zu schreiben, ohne ihn in (R)Markdown einzubetten. Dazu geht die Aufgabe weiter mit `hausaufgabe03b.R` weiter. Sie sollten die Datei auch in Ihren Ordner kopieren und einen Commit machen, bevor Sie die Kopie weiter anpassen.
 
 # Lizenz
-Dieses Werk ist lizenziert unter einer CC-BY-NC-SA Lizenz.
+Diese Datei darf nur Prüfungszwecken dienen
