--- a/Karst/hausaufgabe16.Rmd
+++ b/Karst/hausaufgabe16.Rmd
@@ -61,7 +61,7 @@ ggplot(diamonds,aes(x=carat,y=price,color=color)) + geom_point() + facet_wrap(~c
 # Noch eine Überlegung
 Haben Sie dabei explorativ oder konfirmativ gearbeitet? Was hat das für eine Auswirkung auf die Interpretation der Ergebnisse?
 
-
+#Ich schätze ich habe konfirmativ gearbeitet.
 
 
 # Welchen Zusammenhang haben Karat und Klarheit/Farbe von Diamanten?
